--- a/weixin.html
+++ b/weixin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta maximum-scale=1.0, user-scalable=0>
     <title></title>
     <style></style>
     <style>
@@ -21,7 +22,7 @@
             z-index: 1;
         }
         .body1{
-            margin-top:167px;
+            margin-top:120px;
         }
         .footimg{
             position: fixed;
@@ -35,14 +36,14 @@
             top: 0;
             opacity : 0.8;
             z-index: 1000;
-            height: 168px;
+            height: 124px;
             width: 183px;
             border: 0;
         }
         .sao-box{
             position: fixed;
             right: 10px;
-            top:160px;
+            top:112px;
             z-index: 999;
             width: 40%;
         }
@@ -70,7 +71,7 @@
 <img class="footimg" src="foot.jpg" alt="">
 <div class="sao-box">
     <img class="saoimg" src="sao.png" alt="" >
-    <button class="sao-btn" onclick="getsao();"></button>
+    <button id="video" class="sao-btn" onclick="getsao();"></button>
 </div>
 
 
