--- a/weixin.html
+++ b/weixin.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta maximum-scale=1.0, user-scalable=0>
+     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,
+    width=device-width,initial-scale=1.0" />
     <title></title>
     <style></style>
     <style>
