--- a/weixin.html
+++ b/weixin.html
@@ -72,11 +72,10 @@
 <img class="footimg" src="foot.jpg" alt="">
 <div class="sao-box">
     <img class="saoimg" src="sao.png" alt="" >
-    <button id="video" class="sao-btn" onclick="getsao();"></button>
+    <button class="sao-btn" onclick="getsao();"></button>
 </div>
-
-
 <button class="btn_top" onclick="showsao();"></button>
+<video id="video"></video>
 <script>
     let sao = document.querySelector('.sao-box');
     function  showsao() {
