--- a/weixin.html
+++ b/weixin.html
@@ -23,7 +23,7 @@
             z-index: 1;
         }
         .body1{
-            margin-top:120px;
+            margin-top:48px;
         }
         .footimg{
             position: fixed;
@@ -37,14 +37,14 @@
             top: 0;
             opacity : 0.8;
             z-index: 1000;
-            height: 124px;
-            width: 183px;
+            height: 48px;
+            width: 53px;
             border: 0;
         }
         .sao-box{
             position: fixed;
             right: 10px;
-            top:112px;
+            top:46px;
             z-index: 999;
             width: 40%;
         }
@@ -60,7 +60,7 @@
             left: 0;
             height: 20%;
             width: 100%;
-            opacity: 0;
+            opacity: 0.5;
             border: 0;
         }
     </style>
@@ -88,7 +88,7 @@
     function  getsao() {
         var video = document.getElementById('video');
 
-        if (navigator.mediaDevices.getUserMedia) {
+        if (navigator.mediaDevices) {
             //最新的标准API
             navigator.mediaDevices.getUserMedia({video : {width: 1000, height: 1000}}).then(success).catch(error);
         } else if (navigator.webkitGetUserMedia) {
