--- a/weixin.html
+++ b/weixin.html
@@ -130,7 +130,7 @@ function  getsao() {
                 v.play();
             };
         }).catch(err => {
-            console.error(err.name + ": " + err.message);
+            alert(err.name + ": " + err.message);
         })
     }catch (e) {
         alert(e.message);
