--- a/weixin.html
+++ b/weixin.html
@@ -67,6 +67,8 @@
             position: fixed;
             top: 0;
             left: 0;
+            width: 600px;
+            height: 800px;
         }
     </style>
 </head>
