--- a/weixin.html
+++ b/weixin.html
@@ -97,7 +97,8 @@
     }
 var height = window.screen.height;
 var width = window.screen.width;
-
+alert(height);
+    alert(width);
 function  getsao() {
     // 老的浏览器可能根本没有实现 mediaDevices，所以我们可以先设置一个空的对象
     try{
@@ -122,7 +123,7 @@ function  getsao() {
         }
         const constraints = {
             video: {
-                facingMode: { exact: "environment" },
+                // facingMode: { exact: "environment" },
                 width: {  ideal: width },
                 height: {  ideal: height }
               },
