--- a/weixin.html
+++ b/weixin.html
@@ -123,9 +123,9 @@ function  getsao() {
         }
         const constraints = {
             video: {
-                // facingMode: { exact: "environment" },
-                width: {  ideal: width },
-                height: {  ideal: height }
+                facingMode: "environment"
+                // width: {  ideal: width },
+                // height: {  ideal: height }
               },
             audio: false
         };
