--- a/weixin.html
+++ b/weixin.html
@@ -65,6 +65,7 @@
         }
         #video{
             position: fixed;
+            z-index: 1001;
             top: 0;
             left: 0;
             width: 600px;
