--- a/weixin.html
+++ b/weixin.html
@@ -71,7 +71,7 @@
         .cap-photo{
             position: fixed;
             bottom: 55px;
-            left: 45%;
+            left: calc(50% - 100);
         }
         .cap-photo button{
             border: 0;
@@ -81,6 +81,9 @@
             height: 100px;
         }
         .back-black{
+            position: fixed;
+            left: 0;
+            top:0;
             width:0;
             height: 0;
             background-color: #000000;
@@ -124,68 +127,69 @@ var width = window.screen.width;
     let back = document.getElementById('back_id');
 
     function  getsao() {
-        back.style.width = width;
-        back.style.height = height;
+        back.style.width = width + "px";
+        back.style.height = height + "px";
         back.style.zIndex = 1000;
-        v.style.width = width;
-        v.style.height = height;
+        v.style.width = width + "px";
+        v.style.height = height + "px";
         v.style.zIndex = 1001;
         back.style.display = "block";
         v.style.display = "block";
         capbox.style.zIndex = 1002;
         capbox.style.display = "block";
         // 老的浏览器可能根本没有实现 mediaDevices，所以我们可以先设置一个空的对象
-        try{
-            if (navigator.mediaDevices === undefined) {
-                navigator.mediaDevices = {};
-            }
-            if (navigator.mediaDevices.getUserMedia === undefined) {
-                navigator.mediaDevices.getUserMedia = function (constraints) {
-                    // 首先，如果有getUserMedia的话，就获得它
-                    var getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
-
-                    // 一些浏览器根本没实现它 - 那么就返回一个error到promise的reject来保持一个统一的接口
-                    if (!getUserMedia) {
-                        return Promise.reject(new Error('getUserMedia is not implemented in this browser'));
-                    }
-
-                    // 否则，为老的navigator.getUserMedia方法包裹一个Promise
-                    return new Promise(function (resolve, reject) {
-                        getUserMedia.call(navigator, constraints, resolve, reject);
-                    });
-                }
-            }
-            const constraints = {
-                video: {
-                    facingMode: "environment",
-                    width: {  ideal: width },
-                    height: {  ideal: height }
-                  },
-                audio: false
-            };
-            let promise = navigator.mediaDevices.getUserMedia(constraints);
-            promise.then(stream => {
-                // 旧的浏览器可能没有srcObject
-                if ("srcObject" in v) {
-                    v.srcObject = stream;
-                } else {
-                    // 防止再新的浏览器里使用它，应为它已经不再支持了
-                    v.src = window.URL.createObjectURL(stream);
-                }
-                v.onloadedmetadata = function (e) {
-                    v.play();
-                };
-            }).catch(err => {
-                alert(err.name + ": " + err.message);
-            })
-        }catch (e) {
-            alert(e.message);
-        }
+        // try{
+        //     if (navigator.mediaDevices === undefined) {
+        //         navigator.mediaDevices = {};
+        //     }
+        //     if (navigator.mediaDevices.getUserMedia === undefined) {
+        //         navigator.mediaDevices.getUserMedia = function (constraints) {
+        //             // 首先，如果有getUserMedia的话，就获得它
+        //             var getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
+        //
+        //             // 一些浏览器根本没实现它 - 那么就返回一个error到promise的reject来保持一个统一的接口
+        //             if (!getUserMedia) {
+        //                 return Promise.reject(new Error('getUserMedia is not implemented in this browser'));
+        //             }
+        //
+        //             // 否则，为老的navigator.getUserMedia方法包裹一个Promise
+        //             return new Promise(function (resolve, reject) {
+        //                 getUserMedia.call(navigator, constraints, resolve, reject);
+        //             });
+        //         }
+        //     }
+        //     const constraints = {
+        //         video: {
+        //             facingMode: "environment",
+        //             width: {  ideal: width },
+        //             height: {  ideal: height }
+        //           },
+        //         audio: false
+        //     };
+        //     let promise = navigator.mediaDevices.getUserMedia(constraints);
+        //     promise.then(stream => {
+        //         // 旧的浏览器可能没有srcObject
+        //         if ("srcObject" in v) {
+        //             v.srcObject = stream;
+        //         } else {
+        //             // 防止再新的浏览器里使用它，应为它已经不再支持了
+        //             v.src = window.URL.createObjectURL(stream);
+        //         }
+        //         v.onloadedmetadata = function (e) {
+        //             v.play();
+        //         };
+        //     }).catch(err => {
+        //         alert(err.name + ": " + err.message);
+        //     })
+        // }catch (e) {
+        //     alert(e.message);
+        // }
     }
     cap.addEventListener("click", function () {
         back.style.display = "none";
         capbox.style.display = "none";
         capbox.style.zIndex = 0;
+        v.html = "";
         v.style.display = "none";
     });
 
