--- a/weixin.html
+++ b/weixin.html
@@ -71,7 +71,7 @@
         .cap-photo{
             position: fixed;
             bottom: 55px;
-            left: calc(50% - 100);
+            left: calc(50% - 50px);
         }
         .cap-photo button{
             border: 0;
