--- a/weixin.html
+++ b/weixin.html
@@ -191,6 +191,7 @@ var width = window.screen.width;
         capbox.style.zIndex = 0;
         v.html = "";
         v.style.display = "none";
+        window.location.href = "jin.html";
     });
 
 
