--- a/weixin.html
+++ b/weixin.html
@@ -162,8 +162,8 @@ var width = window.screen.width;
             const constraints = {
                 video: {
                     facingMode: "environment",
-                    width: {  ideal: width },
-                    height: {  ideal: height }
+                    width: {  ideal: height },
+                    height: {  ideal: width }
                   },
                 audio: false
             };
