--- a/jin.html
+++ b/jin.html
@@ -12,7 +12,7 @@
         }
         body{
             background: #5d9564;
-            background-image: url("http://imge.top/fangyi/**jinjin.png");
+            background-image: url("https://imge.top/fangyi/**jinjin.png");
             background-repeat:no-repeat;
             background-size:100% ;
             /*overflow: hidden;*/
