--- a/weixin.html
+++ b/weixin.html
@@ -101,7 +101,7 @@
     <button class="sao-btn" onclick="getsao();"></button>
 </div>
 <button class="btn_top" onclick="showsao();"></button>
-<video id="video"  autoplay="autoplay"></video>
+<video id="video" ></video>
 <div class="cap-photo" id="cap_box">
     <button id="capture">拍照</button>
 </div>
