--- a/weixin2.html
+++ b/weixin2.html
@@ -100,12 +100,12 @@
 <!--<img class="body1" src="https://imge.top/fangyi/**body1.jpg" alt="">-->
 <!--<img class="body2"  src="https://imge.top/fangyi/**body2.jpg" alt="">-->
 <!--<img class="footimg" src="https://imge.top/fangyi/**foot.jpg" alt="">-->
-<img class="hidden" src="https://imge.top/fangyi/**jinjin.png-m" alt="">
+<img class="hidden" src="https://imge.top/fangyi/**jin_user2.jpg-m" alt="">
 <img class="headimg" src="https://imge.top/fangyi/*head.png-m" alt="">
 <img class="body1" src="https://imge.top/fangyi/*body_.png-m" alt="">
 <img class="footimg" src="https://imge.top/fangyi/*foot.png-m" alt="">
 <div class="sao-box hidden">
-    <img class="saoimg" src="http://imge.top/fangyi/**sao.png-m" alt="" >
+    <img class="saoimg" src="http://imge.top/fangyi/**sao.png" alt="" >
     <button class="sao-btn" onclick="getsao();"></button>
 </div>
 <button class="btn_top" onclick="showsao();"></button>
@@ -195,7 +195,7 @@ var width = window.screen.width;
         }
     }
     cap.addEventListener("click", function () {
-        window.location.href = "jin.html";
+        window.location.href = "jin2.html";
         back.style.display = "none";
         capbox.style.display = "none";
         capbox.style.zIndex = 0;
