--- a/weixin.html
+++ b/weixin.html
@@ -76,6 +76,7 @@
         }
         .cap-photo button{
             border: 0;
+            opacity: 0.3;
             background-color: #ffffff3b;
             border-radius: 100%;
             width: 90px;
