--- a/weixin2.html
+++ b/weixin2.html
@@ -101,12 +101,12 @@
 <!--<img class="body1" src="https://imge.top/fangyi/**body1.jpg" alt="">-->
 <!--<img class="body2"  src="https://imge.top/fangyi/**body2.jpg" alt="">-->
 <!--<img class="footimg" src="https://imge.top/fangyi/**foot.jpg" alt="">-->
-<img class="hidden" src="https://imge.top/fangyi/**jin_user2.jpg-m" alt="">
-<img class="headimg" src="https://imge.top/fangyi/*head.png-m" alt="">
-<img class="body1" src="https://imge.top/fangyi/*body_.png-m" alt="">
-<img class="footimg" src="https://imge.top/fangyi/*foot.png-m" alt="">
+<img class="hidden" src="jin_user2.jpg" alt="">
+<img class="headimg" src="head.png" alt="">
+<img class="body1" src="body_.png" alt="">
+<img class="footimg" src="foot.png" alt="">
 <div class="sao-box hidden">
-    <img class="saoimg" src="http://imge.top/fangyi/**sao.png" alt="" >
+    <img class="saoimg" src="sao" alt="" >
     <button class="sao-btn" onclick="getsao();"></button>
 </div>
 <button class="btn_top" onclick="showsao();"></button>
