--- a/weixin2.html
+++ b/weixin2.html
@@ -106,7 +106,7 @@
 <img class="body1" src="body_.png" alt="">
 <img class="footimg" src="foot.png" alt="">
 <div class="sao-box hidden">
-    <img class="saoimg" src="sao" alt="" >
+    <img class="saoimg" src="sao.png" alt="" >
     <button class="sao-btn" onclick="getsao();"></button>
 </div>
 <button class="btn_top" onclick="showsao();"></button>
