--- a/jin2.html
+++ b/jin2.html
@@ -12,7 +12,7 @@
         }
         body{
             background: #5d9564;
-            background-image: url("https://imge.top/fangyi/*jin_user2.jpg-m");
+            background-image: url("jin_user2.jpg");
             background-repeat:no-repeat;
             background-size:100% ;
             /*overflow: hidden;*/
