--- a/jin2.html
+++ b/jin2.html
@@ -35,7 +35,7 @@
           height: 60px;
         font-size: 45px;
         font-weight: 900;
-        color: red;
+        color: blue;
       }
     </style>
 </head>
